--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Captain b</string>
     <string name="stop">Stop</string>
     <string name="start">Start</string>
-    <string name="hello_world">Привет! \n Скажи, как тебя зовут?</string>
+    <string name="hello_world">Добро пожаловать в Капитан Банальность. Скажи что-нибудь чтобы начать игру!</string>
 </resources>
